--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hljs{
+    background-color: transparent !important;
+}
+.cursor-animation{
+    animation: cursor-indicate .4s infinite alternate;
+}
+pre code.hljs {
+    padding: 0.5em !important;
+}
+@media (min-width: 640px){
+    pre code.hljs {
+        padding: 1em !important;
+    }
+}
+@keyframes cursor-indicate {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
